--- a/index.html
+++ b/index.html
@@ -1,14 +1,9 @@
-<!--A Design by W3layouts
-   Author: W3layout
-   Author URL: http://w3layouts.com
-   License: Creative Commons Attribution 3.0 Unported
-   License URL: http://creativecommons.org/licenses/by/3.0/
-   -->
+
 <!DOCTYPE html>
 <html lang="zxx">
 
 <head>
-    <title>D BUSINESS a Corporate Category Bootstrap Responsive Web Template | Home :: w3layouts</title>
+    <title>PROAUDIOS</title>
     <!--meta tags -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -111,8 +106,8 @@
                                 </div>
                             </div>
                             <div class="banner-text-top">
-                                <h3 class="banner-text-h3">DIGITAL BUSINESS</h3>
-                                <p class="banner-text-p"> Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover.</p>
+                                <h3 class="banner-text-h3">PROAUDIOS</h3>
+                                <p class="banner-text-p"> ESPECIALISTAS EN REPARACION .</p>
                                 <p class="banner-text-p"> Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy.</p>
                             </div>
 
