--- a/index.html
+++ b/index.html
@@ -46,37 +46,38 @@
     <!-- nav -->
     <header>
         <nav class="navbar navbar-expand-lg navbar-light">
-            <h1><a class="navbar-brand" href="index.html"><span class="brand-d">D</span>BUSINESS</a></h1>
+            <h1><a class="navbar-brand" href="index.html"><img src="images/logo.png"style="
+            width: 450px"></a></h1>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown"
                 aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <div class="collapse navbar-collapse" id="navbarNavDropdown" style="padding-right: 567px">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item active">
-                        <a class="nav-link scroll" href="index.html">HOME <span class="sr-only">(current)</span></a>
+                        <a class="nav-link scroll" href="index.html">INICIO<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link scroll" href="#about">ABOUT</a>
+                        <a class="nav-link scroll" href="#about">EMPRESA</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         DROPDOWN
         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <a class="dropdown-item scroll" href="#client">TESTIMONIALS</a>
-                            <a class="dropdown-item scroll" href="#news">NEWS</a>
+                            <a class="dropdown-item scroll" href="#client">CERTIFICACIONES</a>
+                            <a class="dropdown-item scroll" href="#news">REPUESTOS</a>
 
                         </div>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link scroll" href="#gallery">PROJECTS</a>
+                        <a class="nav-link scroll" href="#gallery">GALERIA</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link scroll" href="#team">TEAM</a>
+                        <a class="nav-link scroll" href="#team">CLIENTES</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link scroll" href="#blog">BLOG</a>
+                        <a class="nav-link scroll" href="#blog">SERVICIOS</a>
                     </li>
 
                     <li class="nav-item">
