--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-            <div class="collapse navbar-collapse" id="navbarNavDropdown" style="padding-right: 567px">
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item active">
                         <a class="nav-link scroll" href="index.html">INICIO<span class="sr-only">(current)</span></a>
