--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link scroll" href="#mail">CONTACT</a>
+                        <a class="nav-link scroll" href="#mail">CONTACTO</a>
                     </li>
 
                 </ul>
@@ -476,6 +476,20 @@
         </div>
     </div></!-->
     <!-- //video section -->
+    <div>
+        <div class="w3-head-all ">
+                <h3>PRINCIPALES MARCAS</h3>
+            </div>
+
+<center><img src="images/marcas.png"
+alt="La cabeza y el torso de un esqueleto de dinosaurio;
+      tiene una cabeza grande con dientes largos y filosos"
+width="1272"
+height="180">
+<br>
+<br>
+</center>
+</div>
 
     <!-- team -->
     <div class="w3-team banner-bottom py-5" id="team">
@@ -1039,7 +1053,7 @@
                                 <li><label><i class="fas fa-map-marker"></i></label>Laguna Legia 4424, Valle Volcanes, Puerto Montt.</li>
                                 <li><label><i class="far fa-envelope"></i></label><a href="mailto:psan008@gmail."><psan008@gmail.com class="com"></psan008@gmail.com </a>
                                     <a href="mailto:psan008@gmail.com">psan008@gmail.com</a></li>
-                                <li><label><i class="fas fa-phone-volume"></i></label>+56 96448764</li>
+                                <li><label><i class="fas fa-phone-volume"></i></label><a href="https://api.whatsapp.com/send?phone=56996448764&text=Hola%2C%20quisiera%20asesoria%20de%20su%20empresa">+56996448764</a></li>
                             </ul>
                         </div>
                         <div class="agileits_w3layouts_socila_mail">
