--- a/index.html
+++ b/index.html
@@ -85,6 +85,9 @@
                     </li>
 
                 </ul>
+                <P><i class="fa fa-whatsapp" aria-hidden="true"></i></P>
+                <P><i class="fa fa-facebook-square" aria-hidden="true"></i></P>
+                <P><i class="fa fa-envelope" aria-hidden="true"></i></P>
             </div>
         </nav>
     </header>
