--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     <link rel="stylesheet" href="css/flexslider.css" type="text/css" media="all" />
     <!-- fontawesome -->
     <link href="css/fontawesome-all.min.css" rel="stylesheet" type="text/css" media="all">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <!-- Popup css (for Video Popup) -->
     <link href="css/popuo-box.css" rel="stylesheet" type="text/css" media="all" />
 
@@ -60,14 +61,8 @@
                     <li class="nav-item">
                         <a class="nav-link scroll" href="#about">EMPRESA</a>
                     </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-        DROPDOWN
-        </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <a class="dropdown-item scroll" href="#client">CERTIFICACIONES</a>
+                    <li class="nav-item">
                             <a class="dropdown-item scroll" href="#news">REPUESTOS</a>
-
                         </div>
                     </li>
                     <li class="nav-item">
@@ -85,9 +80,23 @@
                     </li>
 
                 </ul>
-                <P><i class="fa fa-whatsapp" aria-hidden="true"></i></P>
-                <P><i class="fa fa-facebook-square" aria-hidden="true"></i></P>
-                <P><i class="fa fa-envelope" aria-hidden="true"></i></P>
+                &nbsp
+                <P><a href="https://www.facebook.com/ProAudios-Servicio-T%C3%A9cnico-Audio-Pro-958865534305075/"><i class="fab fa-facebook-square" 
+                    style="
+                    color: BLACK;
+                    font-size: 30px;
+                    "></i></a></P>
+                    &nbsp
+                <p><a href="https://api.whatsapp.com/send?phone=56996448764&text=Hola%2C%20quisiera%20asesoria%20de%20su%20empresa"><i class="fab fa-whatsapp-square" style="
+                    color: BLACK;
+                    font-size: 30px;
+                    "></i></a></p>
+                    &nbsp
+                <P><a href="mailto:psan008@gmail.com"><i class="fa fa-envelope" aria-hidden="true"
+                     style="
+                    color: BLACK;
+                    font-size: 30px;
+                    "></i></a></P>          
             </div>
         </nav>
     </header>
