--- a/index.html
+++ b/index.html
@@ -62,8 +62,7 @@
                         <a class="nav-link scroll" href="#about">EMPRESA</a>
                     </li>
                     <li class="nav-item">
-                            <a class="dropdown-item scroll" href="#news">REPUESTOS</a>
-                        </div>
+                        <a class="nav-link scroll" href="#news">REPUESTOS</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link scroll" href="#gallery">GALERIA</a>
