--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                         <div class="layer">
                             <div class="banner-bottom-content d-flex">
                                 <div class="banner-text1">
-                                    <h3 class="banner-text-h">MANTENCIÓN</h3>
+                                    <h3 class="banner-text-h">MANTENCIÓN1</h3>
                                     <p class="banner-text-p">Equipos</p>
                                 </div>
                                 <div class="banner-text2">
