--- a/index.html
+++ b/index.html
@@ -488,7 +488,7 @@ height="180">
     <div class="w3-team banner-bottom py-5" id="team">
         <div class="container">
             <div class="h3-head text-center">
-                <h3 class="title-1">TEAM</h3>
+                <h3 class="title-1">PRINCIPALES MARCAS</h3>
             </div>
 
             <div class="w3ls_banner_bottom_grids">
