--- a/index.html
+++ b/index.html
@@ -198,34 +198,38 @@
                         conocimiento y experiencia en: </p><br>
 
                        
-                    <h6 style="color:#FF0000";>DISEÑO, EJECUCION Y PUESTA EN MARCHA</h6>
+                    <h6 style="color:#FF0000";>➤DISEÑO, EJECUCION Y PUESTA EN MARCHA</h6>
                     <p >De proyectos para instalaciones de audio fijo.
                     </p>
 
-                    <h6 style="color:#FF0000";>LEVANTAMIENTO, REPARACION Y MEJORAMIENTO</h6>
+                    <h6 style="color:#FF0000";>➤LEVANTAMIENTO, REPARACION Y MEJORAMIENTO</h6>
                     <p >para sistemas de audio fijos instalados</p>
 
-                    <h6 style="color:#FF0000";>SERVICIO TECNICO Y MANTENIMIENTO</h6>
+                    <h6 style="color:#FF0000";>➤SERVICIO TECNICO Y MANTENIMIENTO</h6>
                     <p >de equipos para  refuerzo sonoro</p>
 
-                    <h6 style="color:#FF0000";>SERVICIO TECNICO Y MANTENIMIENTO</h6>
+                    <h6 style="color:#FF0000";>➤TECNICO Y MANTENIMIENTO</h6>
                     <p >de mplificadores para instrumentos</p>
 
-                    <h6 style="color:#FF0000";>CONSTRUCCION, CALCULO Y DISEÑO DE CAJAS ACUSTICAS</h6>
+                    <h6 style="color:#FF0000";>➤CONSTRUCCION, CALCULO Y DISEÑO DE CAJAS ACUSTICAS</h6>
                     <p >Convencionales tipo reflex, sub-bajos, bocina plegada y line array.</p>
 
-                    <h6 style="color:#FF0000";>CAPACITACION</h6>
+                    <h6 style="color:#FF0000";>➤CAPACITACION</h6>
                     <p >y asesorias en el manejo de equipos.</p><BR>
 
-                    <h6 style="color:#FF0000";>ATENCION EN TERRENO</h6>
+                    <h6 style="color:#FF0000";>➤ATENCION EN TERRENO</h6>
                     <p class="about-text-p text-center"></p><br>
 
-                    <h6 style="color:#FF0000";>VENTA DE REPUESTOS</h6><BR>
-                    <p class="about-text-p text-center"></p>
+                    <h6 style="color:#FF0000";>➤VENTA DE REPUESTOS</h6><BR>
+                    <p class="about-text-p text-center"></p><br>
+                </div>
+<div align="center">
 
                     <h6>MISION</h6>
                     <p >Satisfacer todas las necesidades de nuestros clientes en proyectos de instalación, reparación, diseño, 
                         asesoría y capacitación en audio profesional o en sistemas de video que requieran de un sonido de calidad. </p>
+</div>
+
                     </div>
                
 
