--- a/index.html
+++ b/index.html
@@ -382,27 +382,27 @@
                     <div class="col-md-4 agile-gallery_grid_main">
                         <div class="gallery-img-grid gallery_grid1 hover14 column">
                             <div class="gallery_effect">
-                                <a href="images/g1.jpg" class="sb" title="quis nostrud exercitation ullamco laboris quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum">
+                                <a href="images/g1.jpeg" class="sb" title="quis nostrud exercitation ullamco laboris quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum">
                                     <figure>
-                                        <img src="images/g1.jpg" alt=" " class="img-fluid" />
+                                        <img src="images/g1.jpeg" alt=" " class="img-fluid" />
                                     </figure>
                                 </a>
                             </div>
                         </div>
                         <div class="gallery-img-grid hover14 column">
                             <div class="gallery_effect">
-                                <a href="images/g2.jpg" class="sb" title="quis nostrud exercitation ullamco laboris quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum">
+                                <a href="images/g2.jpge" class="sb" title="quis nostrud exercitation ullamco laboris quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum">
                                     <figure>
-                                        <img src="images/g2.jpg" alt=" " class="img-fluid" />
+                                        <img src="images/g2.jpeg" alt=" " class="img-fluid" />
                                     </figure>
                                 </a>
                             </div>
                         </div>
                         <div class="gallery-img-grid hover14 column">
                             <div class="gallery_effect">
-                                <a href="images/g3.jpg" class="sb" title="quis nostrud exercitation ullamco laboris quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum">
+                                <a href="images/g3.jpeg" class="sb" title="quis nostrud exercitation ullamco laboris quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum">
                                     <figure>
-                                        <img src="images/g3.jpg" alt=" " class="img-fluid" />
+                                        <img src="images/g3.jpeg" alt=" " class="img-fluid" />
                                     </figure>
                                 </a>
                             </div>
@@ -411,18 +411,18 @@
                     <div class="col-md-4 agile-gallery_grid_main">
                         <div class="gallery-img-grid hover14 column">
                             <div class="gallery_effect">
-                                <a href="images/g4.jpg" class="sb" title="quis nostrud exercitation ullamco laboris quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum">
+                                <a href="images/g4.jpeg" class="sb" title="quis nostrud exercitation ullamco laboris quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum">
                                     <figure>
-                                        <img src="images/g4.jpg" alt=" " class="img-fluid" />
+                                        <img src="images/g4.jpeg" alt=" " class="img-fluid" />
                                     </figure>
                                 </a>
                             </div>
                         </div>
                         <div class="gallery-img-grid hover14 column">
                             <div class="gallery_effect">
-                                <a href="images/g5.jpg" class="sb" title="quis nostrud exercitation ullamco laboris quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum">
+                                <a href="images/g5.jpeg" class="sb" title="quis nostrud exercitation ullamco laboris quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum">
                                     <figure>
-                                        <img src="images/g5.jpg" alt=" " class="img-fluid" />
+                                        <img src="images/g5.jpeg" alt=" " class="img-fluid" />
                                     </figure>
                                 </a>
                             </div>
@@ -431,27 +431,27 @@
                     <div class="col-md-4 agile-gallery_grid_main">
                         <div class="gallery-img-grid gallery_grid1 hover14 column">
                             <div class="gallery_effect">
-                                <a href="images/g6.jpg" class="sb" title="quis nostrud exercitation ullamco laboris quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum">
+                                <a href="images/g6.jpeg" class="sb" title="quis nostrud exercitation ullamco laboris quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum">
                                     <figure>
-                                        <img src="images/g6.jpg" alt=" " class="img-fluid" />
+                                        <img src="images/g6.jpeg" alt=" " class="img-fluid" />
                                     </figure>
                                 </a>
                             </div>
                         </div>
                         <div class="gallery-img-grid hover14 column">
                             <div class="gallery_effect">
-                                <a href="images/g7.jpg" class="sb" title="quis nostrud exercitation ullamco laboris quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum">
+                                <a href="images/g7.jpeg" class="sb" title="quis nostrud exercitation ullamco laboris quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum">
                                     <figure>
-                                        <img src="images/g7.jpg" alt=" " class="img-fluid" />
+                                        <img src="images/g7.jpeg" alt=" " class="img-fluid" />
                                     </figure>
                                 </a>
                             </div>
                         </div>
                         <div class="gallery-img-grid hover14 column">
                             <div class="gallery_effect">
-                                <a href="images/g8.jpg" class="sb" title="quis nostrud exercitation ullamco laboris quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum">
+                                <a href="images/g8.jpeg" class="sb" title="quis nostrud exercitation ullamco laboris quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum">
                                     <figure>
-                                        <img src="images/g8.jpg" alt=" " class="img-fluid" />
+                                        <img src="images/g8.jpeg" alt=" " class="img-fluid" />
                                     </figure>
                                 </a>
                             </div>
