--- a/index.html
+++ b/index.html
@@ -201,7 +201,8 @@
                     <p align="left" style="color:#FF0000";>➤Construcción , Calculo y Diseño de Cajas Acusticas  <span style="color:black ">Convencionales tipo reflex, sub-bajos, bocina plegada y line array.</p>
                     <p align="left" style="color:#FF0000";>➤Capacitación  <span style="color:black ">y asesorias en el manejo de equipos.</p>
                     <p align="left" style="color:#FF0000";>➤Atencion en Terreno</p>
-                    <p align="left" style="color:#FF0000";>➤Venta de Respuestos</p><BR>
+                    <p align="left" style="color:#FF0000";>➤Venta de Respuestos</p>
+                        <img aling="left" src="images/about.jpg" alt=" " class="img-responsive" />
 
                   
                     
