--- a/index.html
+++ b/index.html
@@ -220,6 +220,7 @@
                     <p align="left" style="color:#FF0000";>➤Atencion en Terreno</p>
                     <p align="left" style="color:#FF0000";>➤Venta de Respuestos</p>
                         <img aling="left" src="images/about.jpg" alt=" " class="img-responsive" />
+                        <img aling="left" src="images/hdr.jpg" alt=" " class="img-responsive" />
 
                   
                     
