--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                     font-size: 30px;
                     "></i></a></P>
                     &nbsp
-                <p><a href="https://api.whatsapp.com/send?phone=56996448764&text=Hola%2C%20quisiera%20asesoria%20de%20su%20empresa"><i class="fab fa-whatsapp-square" style="
+                <p><a href="https://api.whatsapp.com/send?phone=56954038380&text=Hola%2C%20quisiera%20asesoria%20de%20su%20empresa"><i class="fab fa-whatsapp-square" style="
                     color: BLACK;
                     font-size: 30px;
                     "></i></a></p>
@@ -1018,7 +1018,9 @@
                                 <li><label><i class="fas fa-map-marker"></i></label>Laguna Legia 4424, Valle Volcanes, Puerto Montt.</li>
                                 <li><label><i class="far fa-envelope"></i></label><a href="mailto:psan008@gmail."><psan008@gmail.com class="com"></psan008@gmail.com </a>
                                     <a href="mailto:psan008@gmail.com">psan008@gmail.com</a></li>
-                                <li><label><i class="fas fa-phone-volume"></i></label><a href="https://api.whatsapp.com/send?phone=56996448764&text=Hola%2C%20quisiera%20asesoria%20de%20su%20empresa">+56996448764</a></li>
+                                    <li><label><i class="far fa-envelope"></i></label><a href="mailto:psan008@gmail."><psan008@gmail.com class="com"></psan008@gmail.com </a>
+                                    <a href="mailto:info@proaudios.cl">info@proaudios.cl</a></li>
+                                <li><label><i class="fas fa-phone-volume"></i></label><a href="https://api.whatsapp.com/send?phone=56996448764&text=Hola%2C%20quisiera%20asesoria%20de%20su%20empresa">+56954038380</a></li>
                             </ul>
                         </div>
                         <div class="agileits_w3layouts_socila_mail">
