--- a/index.html
+++ b/index.html
@@ -84,18 +84,18 @@
                 &nbsp
                 <P><a href="https://www.facebook.com/ProAudios-Servicio-T%C3%A9cnico-Audio-Pro-958865534305075/"><i class="fab fa-facebook-square" 
                     style="
-                    color: BLACK;
+                    color: rgb(226, 122, 25);
                     font-size: 30px;
                     "></i></a></P>
                     &nbsp
                 <p><a href="https://api.whatsapp.com/send?phone=56954038380&text=Hola%2C%20quisiera%20asesoria%20de%20su%20empresa"><i class="fab fa-whatsapp-square" style="
-                    color: BLACK;
+                    color: rgb(226, 122, 25);
                     font-size: 30px;
                     "></i></a></p>
                     &nbsp
                 <P><a href="mailto:psan008@gmail.com"><i class="fa fa-envelope" aria-hidden="true"
                      style="
-                    color: BLACK;
+                    color:rgb(226, 122, 25);
                     font-size: 30px;
                     "></i></a></P>          
             </div>
