--- a/index.html
+++ b/index.html
@@ -121,8 +121,8 @@
                                     <p class="banner-text-p">Técnico</p>
                                 </div>
                                 <div class="banner-text2">
-                                        <p class="banner-text-p">Servicio</p>
-                                        <p class="banner-text-p">Técnico</p>
+                                        <p class="banner-text-p">Reparacion</p>
+                                        <p class="banner-text-p">Consolas Audio</p>
                                 
                                </div>
                                 
@@ -147,8 +147,8 @@
                                     <p class="banner-text-p">Equipos</p>
                                 </div>
                                 <div class="banner-text2">
-                                    <p class="banner-text-p">Capacitación</p>
-                                    <p class="banner-text-p"> Manejo Equipos</p>
+                                    <p class="banner-text-p">Proyectos</p>
+                                    <p class="banner-text-p">Llave</p>
                                 </div>
                                 <div class="banner-text2">
                                         <p class="banner-text-p">Capacitación</p>
@@ -175,8 +175,8 @@
                                     <p class="banner-text-p"> En Terreno</p>
                                 </div>
                                 <div class="banner-text1">
-                                        <p class="banner-text-p">Atención</p>
-                                        <p class="banner-text-p"> En Terreno</p>
+                                        <p class="banner-text-p">Servicio</p>
+                                        <p class="banner-text-p">Tecnico</p>
                                     </div>
                                 <div class="banner-text2">
                                     <p class="banner-text-p">Venta</p>
