--- a/index.html
+++ b/index.html
@@ -168,8 +168,8 @@
                         <div class="layer">
                             <div class="banner-bottom-content d-flex" style="padding-right: 150px">
                                 <div center class="banner-text1">
-                                    <p class="banner-text-p">Atención</p>
-                                    <p class="banner-text-p"> En Terreno</p>
+                                    <p class="banner-text-p">Servicio</p>
+                                    <p class="banner-text-p">Tecnico</p>
                                 </div>
                                 <div class="banner-text2">
                                         <p class="banner-text-p">Atención</p>
