--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
                         </div>
                         <div class="gallery-img-grid hover14 column">
                             <div class="gallery_effect">
-                                <a href="images/g2.jpge" class="sb" title="quis nostrud exercitation ullamco laboris quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum">
+                                <a href="images/g2.jpeg" class="sb" title="quis nostrud exercitation ullamco laboris quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum">
                                     <figure>
                                         <img src="images/g2.jpeg" alt=" " class="img-fluid" />
                                     </figure>
@@ -432,7 +432,7 @@
                                 <a href="images/g6.jpeg" class="sb" title="quis nostrud exercitation ullamco laboris quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum">
                                     <figure>
                                         <img src="images/g6.jpeg" alt=" " class="img-fluid" />
-                                    </figure>
+                                    </figure> 
                                 </a>
                             </div>
                         </div>
@@ -441,7 +441,7 @@
                                 <a href="images/g7.jpeg" class="sb" title="quis nostrud exercitation ullamco laboris quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum">
                                     <figure>
                                         <img src="images/g7.jpeg" alt=" " class="img-fluid" />
-                                    </figure>
+                                    </figure> 
                                 </a>
                             </div>
                         </div>
