--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
                     <li>
                         <div class="banner-top">
                             <div class="layer">
-                                <div class="banner-bottom-content d-flex">
-                                    <div class="banner-text1">
+                                <div class="banner-bottom-content d-flex" style="padding-right: 5px;"  >
+                                    <div class="banner-text1" >
                                         <h3 class="banner-text-h">ventas</h3>
                                         <p class="banner-text-p">de repuestos</p>
                                     </div>
@@ -136,8 +136,8 @@
                     <div class="banner-top1">
                         <div class="layer">
                             
-                            <div class="banner-bottom-content d-flex">
-                                <div class="banner-text1">
+                            <div class="banner-bottom-content d-flex"style="padding-right: 5px;">
+                                <div class="banner-text1" >
                                     
                                     <h3 class="banner-text-h">diseño</h3>
                                     <p class="banner-text-p"> proyectos</p>
@@ -160,8 +160,8 @@
                 <li>
                     <div class="banner-top2">
                         <div class="layer">
-                            <div class="banner-bottom-content d-flex">
-                                <div class="banner-text1">
+                            <div class="banner-bottom-content d-flex"style="padding-right: 5px;">
+                                <div class="banner-text1" >
                                     <h3 class="banner-text-h">capacitación</h3>
                                     <p class="banner-text-p"> empresas</p>
                                 </div>
