--- a/index.html
+++ b/index.html
@@ -476,7 +476,12 @@
         alt="La cabeza y el torso de un esqueleto de dinosaurio;
       tiene una cabeza grande con dientes largos y filosos"
            width="1272"
-           height="180">
+           height="180"
+           style="
+           display: block; 
+  margin: 0 auto;
+  max-width: 100%;
+  width: 80%;">
           <br>
           <br>
       </center>
