--- a/index.html
+++ b/index.html
@@ -207,8 +207,16 @@
                     <p align="left" style="color:#FF0000";>➤Capacitación  <span style="color:black ">y asesorias en el manejo de equipos.</p>
                     <p align="left" style="color:#FF0000";>➤Atencion en Terreno</p>
                     <p align="left" style="color:#FF0000";>➤Venta de Respuestos</p>
-                        <img aling="left" src="images/about.jpg" alt=" " class="img-responsive" />
-                        <img aling="left" src="images/hdr.jpg" alt=" " class="img-responsive" />
+                        <img aling="left" src="images/about.jpg" alt=" " class="img-responsive" style="
+           display: block; 
+  margin: 0 auto;
+  max-width: 100%;
+  width: 80%;"/>
+                        <img aling="left" src="images/hdr.jpg" alt=" " class="img-responsive" style="
+           display: block; 
+  margin: 0 auto;
+  max-width: 100%;
+  width: 80%;"/>
 
                   
                     
