--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
                     <div class="col-md-4 agile-gallery_grid_main">
                         <div class="gallery-img-grid gallery_grid1 hover14 column">
                             <div class="gallery_effect">
-                                <a href="images/g1.jpeg" class="sb" title="quis nostrud exercitation ullamco laboris quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum">
+                                <a href="images/g1.jpg" class="sb" title="Mejoramiento de sonido e instalación de audio para auditorio">
                                     <figure>
                                         <img src="images/g1.jpg" alt=" " class="img-fluid" />
                                     </figure>
@@ -381,7 +381,7 @@
                         </div>
                         <div class="gallery-img-grid hover14 column">
                             <div class="gallery_effect">
-                                <a href="images/g2.jpeg" class="sb" title="quis nostrud exercitation ullamco laboris quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum">
+                                <a href="images/g2.jpg" class="sb" title="Mejoramiento de sonido e instalación de audio para auditorio">
                                     <figure>
                                         <img src="images/g2.jpg" alt=" " class="img-fluid" />
                                     </figure>
@@ -390,7 +390,7 @@
                         </div>
                         <div class="gallery-img-grid hover14 column">
                             <div class="gallery_effect">
-                                <a href="images/g3.jpeg" class="sb" title="quis nostrud exercitation ullamco laboris quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum">
+                                <a href="images/g3.jpg" class="sb" title="Reparación y mantenimiento completo power AudioLab MH9400">
                                     <figure>
                                         <img src="images/g3.jpg" alt=" " class="img-fluid" />
                                     </figure>
@@ -399,7 +399,7 @@
                         </div>
                         <div class="gallery-img-grid hover14 column">
                             <div class="gallery_effect">
-                                <a href="images/g3.jpeg" class="sb" title="quis nostrud exercitation ullamco laboris quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum">
+                                <a href="images/g10.jpg" class="sb" title="Reparación y medición de frecuencias para sistema inalámbrico UHF marca Shure SM58">
                                     <figure>
                                         <img src="images/g10.jpg" alt=" " class="img-fluid" />
                                     </figure>
@@ -410,7 +410,7 @@
                     <div class="col-md-4 agile-gallery_grid_main">
                         <div class="gallery-img-grid hover14 column">
                             <div class="gallery_effect">
-                                <a href="images/g4.jpeg" class="sb" title="quis nostrud exercitation ullamco laboris quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum">
+                                <a href="images/g4.jpg" class="sb" title="Reparación de consola digital Allen Heath QU 32">
                                     <figure>
                                         <img src="images/g4.jpg" alt=" " class="img-fluid" />
                                     </figure>
@@ -419,7 +419,7 @@
                         </div>
                         <div class="gallery-img-grid hover14 column">
                             <div class="gallery_effect">
-                                <a href="images/g5.jpeg" class="sb" title="quis nostrud exercitation ullamco laboris quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum">
+                                <a href="images/g5.jeg" class="sb" title="Reparación y mantenimiento consola digital Midas M32">
                                     <figure>
                                         <img src="images/g5.jpg" alt=" " class="img-fluid" />
                                     </figure>
@@ -428,7 +428,7 @@
                         </div>
                         <div class="gallery-img-grid hover14 column">
                             <div class="gallery_effect">
-                                <a href="images/g5.jpeg" class="sb" title="quis nostrud exercitation ullamco laboris quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum">
+                                <a href="images/g6.jpg" class="sb" title="Reparación consola digital Behringer X32">
                                     <figure>
                                         <img src="images/g6.jpg" alt=" " class="img-fluid" />
                                     </figure>
@@ -439,7 +439,7 @@
                     <div class="col-md-4 agile-gallery_grid_main">
                         <div class="gallery-img-grid gallery_grid1 hover14 column">
                             <div class="gallery_effect">
-                                <a href="images/g6.jpeg" class="sb" title="quis nostrud exercitation ullamco laboris quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum">
+                                <a href="images/g7.jpg" class="sb" title="Reparación unidad de efectos consola análoga Behringer SX3242">
                                     <figure>
                                         <img src="images/g7.jpg" alt=" " class="img-fluid" />
                                     </figure> 
@@ -448,7 +448,7 @@
                         </div>
                         <div class="gallery-img-grid hover14 column">
                             <div class="gallery_effect">
-                                <a href="images/g7.jpeg" class="sb" title="quis nostrud exercitation ullamco laboris quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum">
+                                <a href="images/g8.jpg" class="sb" title="Reparación y mantenimiento amplificador guitarra a tubos ">
                                     <figure>
                                         <img src="images/g8.jpg" alt=" " class="img-fluid" />
                                     </figure> 
@@ -457,7 +457,7 @@
                         </div>
                         <div class="gallery-img-grid hover14 column">
                             <div class="gallery_effect">
-                                <a href="images/g8.jpeg" class="sb" title="quis nostrud exercitation ullamco laboris quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum">
+                                <a href="images/g9.jpg" class="sb" title="Reparación amplificador de guitarra a transistores. Mediciones realizadas con instrumentos digitales.">
                                     <figure>
                                         <img src="images/g9.jpg" alt=" " class="img-fluid" />
                                     </figure>
@@ -466,7 +466,7 @@
                         </div>
                         <div class="gallery-img-grid hover14 column">
                             <div class="gallery_effect">
-                                <a href="images/g8.jpeg" class="sb" title="quis nostrud exercitation ullamco laboris quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum">
+                                <a href="images/g11.jpg" class="sb" title="Reparación y mantenimiento completo amplificador PHONIC XP5000">
                                     <figure>
                                         <img src="images/g11.jpg" alt=" " class="img-fluid" />
                                     </figure>
