--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
                         </div>
                         <div class="gallery-img-grid hover14 column">
                             <div class="gallery_effect">
-                                <a href="images/g5.jeg" class="sb" title="Reparación y mantenimiento consola digital Midas M32">
+                                <a href="images/g5.jpg" class="sb" title="Reparación y mantenimiento consola digital Midas M32">
                                     <figure>
                                         <img src="images/g5.jpg" alt=" " class="img-fluid" />
                                     </figure>
